feat: API 서비스를 위한 패키지 구조 변경 및 코드 수정