@@ -1,9 +1,9 @@
-package org.potwings.utils.menufinder;
+package org.potwings.utils.menufinder.service;
 
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.extern.log4j.Log4j2;
 import org.openqa.selenium.By;
 import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.Keys;
@@ -14,21 +14,19 @@ import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
+import org.springframework.stereotype.Service;
 
-public class Crawler {
+@Service
+@Log4j2
+public class MenuFinderService {
 
-  private static final String findStore = "가산역 호프";
-  private static List<String> findMenuList = new ArrayList<>();
-
-  private static List<String> resultList = new ArrayList<>();
-
-  public static void main(String[] args) {
+  public List<String> findMenuHaveStore(String findStore, String findMenu) {
 
     System.setProperty("webdriver.chrome.driver", "C:/zzz/chromedriver-win64/chromedriver.exe");
 
-    String findMenu = "아이스크림, 빙수";
-
+    List<String> findMenuList = new ArrayList<>();
     if (findMenu.contains(",")) {
+      // 메뉴가 여러개 들어가 있는 경우
       String[] findMenus = findMenu.split(",");
       for (String findMenuItem : findMenus) {
         findMenuList.add(findMenuItem.trim());
@@ -43,6 +41,7 @@ public class Crawler {
     WebDriver driver = new ChromeDriver(options);
     WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(10));
 
+    List<String> resultList = null;
     try {
       driver.get("https://map.naver.com");  // 네이버 지도 접속
 
@@ -57,36 +56,28 @@ public class Crawler {
           ExpectedConditions.visibilityOfElementLocated(By.cssSelector("#searchIframe")));
       driver.switchTo().frame(searchIframe); // 검색 결과 iframe으로 이동
 
+      resultList = new ArrayList<>();
+      // 음식점 목록 끝 페이지까지 반복하여 진행
       while (true) {
+
         // 모든 음식점 목록을 불러오기 위해 스크롤 진행
-        JavascriptExecutor js = (JavascriptExecutor) driver;
-        WebElement scrollDiv = wait.until(ExpectedConditions.visibilityOfElementLocated(
-            By.cssSelector("#_pcmap_list_scroll_container")));
-
-        long scrollTop = 0;
-        while (true) {
-          // 컨텐츠 로딩 속도를 위해 스크롤 천천히 아래로 이동
-          js.executeScript("arguments[0].scrollTop += arguments[1];", scrollDiv, 700);
-
-          // 약간의 대기 시간 (렌더링 시간 고려)
-          Thread.sleep(1000);
-
-          long newScrollTop = (long) js.executeScript("return arguments[0].scrollTop", scrollDiv);
-          if (scrollTop == newScrollTop) {
-            break;
-          }
-          scrollTop = newScrollTop;
-        }
+        scrollWholeList(driver, wait);
 
         // 음식점 목록 로딩 완료 후 결과 추출
         List<WebElement> storeList = driver.findElements(By.className("iHXbN"));
         for (WebElement store : storeList) {
           wait.until(ExpectedConditions.elementToBeClickable(store)).click();
-          Thread.sleep(3000); // 클릭 후 로딩 대기
-          processMenuAndMore(driver, wait);  // 메뉴 클릭 및 GHAhO 값 수집
+          Thread.sleep(3000); // 음식점 클릭 후 로딩 대기
+
+          // 음식점에 특정 메뉴 포함하고 있는지 여부 확인
+          String matchedStore = checkStoreMenus(driver, wait, findMenuList);
+          if (matchedStore != null) {
+            resultList.add(matchedStore);
+          }
           driver.switchTo().frame(searchIframe); // 검색 iframe으로 이동
         }
 
+        // [이전 페이지, 다음 페이지] 버튼 목록 중 다음 페이지 선택
         WebElement nextPageBtn = driver.findElements(By.className("eUTV2")).get(1);
         boolean hasNextPage = nextPageBtn.getAttribute("aria-disabled").equals("false");
         if (!hasNextPage) {
@@ -96,28 +87,66 @@ public class Crawler {
         nextPageBtn.click(); // 다음 페이지로 이동
       }
     } catch (Exception e) {
-      e.printStackTrace();
+      log.error("findMenu fail : {}", e.getMessage(), e);
     } finally {
       driver.quit();
     }
+    return resultList;
   }
 
-  // "메뉴" 클릭 및 "더보기" 반복 클릭, GHAhO 수집
-  private static void processMenuAndMore(WebDriver driver, WebDriverWait wait) {
+  /**
+   * 무한 스크롤 방식에서 전체 목록을 불러오기 위해 목록 스크롤
+   *
+   * @param driver
+   * @param wait
+   * @throws InterruptedException
+   */
+  private void scrollWholeList(WebDriver driver, WebDriverWait wait) {
+    JavascriptExecutor js = (JavascriptExecutor) driver;
+    WebElement scrollDiv = wait.until(ExpectedConditions.visibilityOfElementLocated(
+        By.cssSelector("#_pcmap_list_scroll_container")));
+
+    long scrollTop = 0;
+    while (true) {
+      // 컨텐츠 로딩 속도를 위해 스크롤 천천히 아래로 이동
+      js.executeScript("arguments[0].scrollTop += arguments[1];", scrollDiv, 700);
+
+      // 약간의 대기 시간 (렌더링 시간 고려)
+      try {
+        Thread.sleep(1000);
+      } catch (InterruptedException ie) {
+        log.debug("Thread Sleep fail : {}", ie.getMessage(), ie);
+      }
+
+      long newScrollTop = (long) js.executeScript("return arguments[0].scrollTop", scrollDiv);
+      if (scrollTop == newScrollTop) {
+        break;
+      }
+      scrollTop = newScrollTop;
+    }
+  }
+
+  private String checkStoreMenus(WebDriver driver, WebDriverWait wait,
+      List<String> findMenuList) {
+
+    String matchResult = null;
     try {
-      driver.switchTo().defaultContent(); //storeIframe을 찾을 수 있도록 전체 화면으로 driver 이동
+      driver.switchTo().defaultContent(); // 다음 store 찾을 수 있도록 전체 화면으로 focus 이동
       WebElement storeIframe = wait.until(
           ExpectedConditions.visibilityOfElementLocated(By.cssSelector("#entryIframe")));
       driver.switchTo().frame(storeIframe); // 음식점 iframe으로 이동
+
+      // 음식점 페이지 중단 선택 메뉴
       List<WebElement> spans = driver.findElements(By.className("veBoZ"));
       for (WebElement span : spans) {
+        // 그 중 메뉴 버튼 클릭
         if (span.getText().equals("메뉴")) {
-          System.out.println(span);
           span.click();
           break;
         }
       }
 
+      // 모든 메뉴 목록을 불러오기 위해 더보기 클릭
       WebElement moreMenu = null;
       while (true) {
         try {
@@ -137,23 +166,21 @@ public class Crawler {
             String text = el.getText();
             return findMenuList.stream().anyMatch(text::contains);
           })
-          .collect(Collectors.toList());
+          .toList();
 
       if (!findResult.isEmpty()) {
         StringBuilder sb = new StringBuilder();
         sb.append("음식점 명 : ").append(driver.findElement(By.className("GHAhO")).getText());
         findResult.forEach(result -> sb.append(result).append(", "));
-        resultList.add(sb.toString());
+        matchResult = sb.toString();
       }
 
       driver.switchTo().defaultContent(); // 다음 store 검색을 위해 현재 store Iframe에서 빠져나옴
     } catch (Exception e) {
-      System.out.println("메뉴 클릭 처리 중 오류 발생");
-      e.printStackTrace();
+      log.error("메뉴 클릭 처리 중 오류 발생 : {}", e.getMessage(), e);
     }
 
-    for (String result : resultList) {
-      System.out.println(result);
-    }
+    // 메뉴 없는 경우
+    return matchResult;
   }
 }
